@@ -1,0 +1,33 @@
+package Bundle::IkiWiki::Extras;
+
+$VERSION = '0.01';
+
+1;
+
+__END__
+
+=head1 NAME
+
+Bundle::IkiWiki - modules used by ikiwiki plugins
+
+=head1 SYNOPSIS
+
+perl -MCPAN -e 'install Bundle::IkiWiki::Extras'
+
+=head1 CONTENTS
+
+RPC::XML
+File::MimeInfo
+Locale::gettext
+Net::OpenID::Consumer
+LWPx::ParanoidAgent
+Crypt::SSLeay
+Text::CSV
+Text::Typography
+Text::Textile
+Text::WikiFormat
+XML::Feed
+
+=head1 AUTHOR
+
+Joey Hess <joey@ikiwiki.info>
