@@ -1,0 +1,44 @@
+$CPAN::Config = {
+  'auto_commit' => q[0],
+  'build_cache' => q[10],
+  'build_dir' => "$ENV{HOME}/.cpan/build/",
+  'cache_metadata' => q[1],
+  'commandnumber_in_prompt' => q[1],
+  'cpan_home' => "$ENV{HOME}/.cpan/",
+  'ftp' => q[ftp],
+  'ftp_passive' => q[1],
+  'ftp_proxy' => q[],
+  'getcwd' => q[cwd],
+  'gzip' => q[gzip],
+  'histfile' => "$ENV{HOME}/.cpan/histfile/",
+  'histsize' => q[100],
+  'http_proxy' => q[],
+  'inactivity_timeout' => q[0],
+  'index_expire' => q[1],
+  'inhibit_startup_message' => q[0],
+  'keep_source_where' => "$ENV{HOME}/.cpan/sources/",
+  'make' => q[make],
+  'make_arg' => q[],
+  'make_install_arg' => q[],
+  'make_install_make_command' => q[make],
+  'makepl_arg' => "PREFIX=$ENV{HOME} LIB=$ENV{HOME}/lib/perl5",
+  'mbuild_arg' => q[],
+  'mbuild_install_arg' => q[],
+  'mbuild_install_build_command' => q[./Build],
+  'mbuildpl_arg' => "-install_path lib=$ENV{HOME}/lib/perl5",
+  'no_proxy' => q[],
+  'pager' => q[less],
+  'prerequisites_policy' => q[follow],
+  'scan_cache' => q[atstart],
+  'shell' => q[sh],
+  'show_upload_date' => q[0],
+  'tar' => q[tar],
+  'term_is_latin' => q[1],
+  'term_ornaments' => q[1],
+  'unzip' => q[unzip],
+  'urllist' => [],
+  'use_sqlite' => q[0],
+  'wget' => q[wget],
+};
+1;
+__END__
