@@ -1,0 +1,7 @@
+In this directory is a CPAN config file that causes it to install into the HOME
+directory, and tries to be reasonably portable. Set PERL5LIB=ikiwiki/cpan to
+use it.
+
+This is provided with ikiwiki for use on hosting providers such as
+nearlyfreespeech.net, that have CPAN but need some tweaking for it to be
+usable by a regular user.
