@@ -15,6 +15,13 @@ ikiwiki (2.45) UNRELEASED; urgency=low
     if the source file does not exist.
   * git: Put -- before the filename when calling git rev-list to avoid
     warning message when the file doesn't exist.
+  * Add a Bundle::Ikiwiki to the source for use with CPAN to install *all*
+    the modules ikiwiki can use.
+  * Add a cpan directory containing a CPAN::MyConfig that can ease use of
+    CPAN to install in a home directory on shared hosting providers.
+  * With these changes, it's pretty easy to install onto nearlyfreespeech.net
+    and probably other shared hosting providers like dreamhost. Added
+    a tip page documentng the process for nearlyfreespeech.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 26 Apr 2008 15:09:36 -0400
 
